--- a/index.html
+++ b/index.html
@@ -107,23 +107,9 @@
               </div>
               <p class="experience-description">
                 Redactor de artículos periodísticos para la web. Noticias de
-                índole social y deportivas. En Diagonal Al Aro, también
-                participé en entrevistas y en creación de contenido audiovisual
-                para redes sociales.
+                índole social y deportivas. En Diagonal Al Agi
               </p>
-            </div>
-          </div>
 
-          <!-- Card 2 -->
-          <div class="experience-card">
-            <div class="experience-image">
-              <i data-lucide="radio"></i>
-            </div>
-            <div class="experience-data">
-              <div class="data-container">
-                <h3>Columnas radiales</h3>
-                <p>Sofia Del Plata / FM Raíces Rock</p>
-              </div>
               <p class="experience-description">
                 Columna radial sobre el básquet platense, Liga Federal y Liga
                 Argentina, con análisis, entrevistas y actualidad de los equipos
