--- a/index.html
+++ b/index.html
@@ -107,13 +107,10 @@
               </div>
               <p class="experience-description">
                 Redactor de artículos periodísticos para la web. Noticias de
-                índole social y deportivas. En Diagonal Al Agi
-              </p>
-
-              <p class="experience-description">
-                Columna radial sobre el básquet platense, Liga Federal y Liga
-                Argentina, con análisis, entrevistas y actualidad de los equipos
-                y protagonistas.
+                índole social y deportivas. En Diagonal Al Aro. Columna radial
+                sobre el básquet platense, Liga Federal y Liga Argentina, con
+                análisis, entrevistas y actualidad de los equipos y
+                protagonistas.
               </p>
             </div>
           </div>
