--- a/index.html
+++ b/index.html
@@ -115,6 +115,23 @@
                 </p>
               </div>
             </div>
+            <!-- Card 2 -->
+            <div class="experience-card">
+              <div class="experience-image">
+                <i data-lucide="edit-3"></i>
+              </div>
+              <div class="experience-data">
+                <div class="data-container">
+                  <h3>Columnas radiales (Prácticas)</h3>
+                  <p>Sofia Del Plata / FM Raíces Rock</p>
+                </div>
+                <p class="experience-description">
+                  Columna radial sobre el básquet platense, Liga Federal y Liga
+                  Argentina, con análisis, entrevistas y actualidad de los
+                  equipos platenses y sus protagonistas.
+                </p>
+              </div>
+            </div>
 
             <!-- Card 3 -->
             <div class="experience-card">
