changes job radio

--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
             <!-- Card 2 -->
             <div class="experience-card">
               <div class="experience-image">
-                <i data-lucide="edit-3"></i>
+                <i data-lucide="radio"></i>
               </div>
               <div class="experience-data">
                 <div class="data-container">
-                  <h3>Columnas radiales (Prácticas)</h3>
+                  <h3>Columnas radiales</h3>
                   <p>Sofia Del Plata / FM Raíces Rock</p>
                 </div>
                 <p class="experience-description">
